# agentflowkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: README.md  current-status.md
docs/architecture/: README.md  api.md  overview.md  runtime.md
docs/guides/: README.md  branching-workflows.md  first-workflow.md  human-approval.md  inspecting-results.md  retries-and-failures.md  workflow-composition.md  workflow-graphs.md  workflow-hooks.md
examples/: approval_refund_workflow.py  branching_refund_workflow.py  content_review.py  graph_export.py  refund_workflow.py  support_triage.py  workflow_composition.py  workflow_hooks.py
src/agentflow/: __init__.py  approvals.py  decorators.py  exceptions.py  executor.py  graph.py  hooks.py  models.py  retry.py  routing.py  runtime.py  utils.py  validation.py
src/agentflow/controls/: __init__.py
src/agentflow/inspection/: __init__.py  graph.py
src/agentflow/runtime/: __init__.py  executor.py  invocation.py
src/agentflow/validation/: __init__.py  definitions.py
tests/: test_approvals.py  test_branching.py  test_composition.py  test_decorators.py  test_edge_cases.py  test_execution.py  test_graph.py  test_hooks.py  test_package.py  test_results.py  test_retries.py  test_validation.py
